--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -88,8 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = tokenizer(\"Can you summarize\", return_tensors=\"pt\").to(device)\n",
-    "b"
+    "inputs = tokenizer(\"Can you summarize\", return_tensors=\"pt\").to(device)\n"
    ]
   },
   {
